--- a/Infra/cluster/azure-vote.yaml
+++ b/Infra/cluster/azure-vote.yaml
@@ -51,9 +51,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis-service
-  annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
-spec:
+spec: # Par default le type est ClusterIP, il n'y a aucun raison de le spécifier (type: ClusterIP)
   ports:
   - port: 6379
   selector:
@@ -107,9 +105,6 @@ spec:
             secretKeyRef:
               name: basicAuth-treafik-secret
               key: password
-      # Add annotations for Traefik
-      annotations:
-        traefik.ingress.kubernetes.io/router.entrypoints: web
 
 ---
 # App Service
