--- a/Infra/cluster/ingress_dev1.yaml
+++ b/Infra/cluster/ingress_dev1.yaml
@@ -1,17 +1,17 @@
 # Ingress creation
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
 metadata:
   name: votingapp
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    treafik.ingress.kubernetes.io/rewrite-target: /
     # cert-manager.io/issuer: letsencrypt
     # cert-manager.io/issuer-kind: Issuer
     # cert-manager.io/issuer-group: cert-manager.io
 spec:
-  ingressClassName: nginx-qua
+  ingressClassName: treafik-dev
   rules:
-  - host: smoothie-qua.simplon-duna.space
+  - host: smoothie-treafik.simplon-duna.space
     http:
       paths:
       - path: /
@@ -23,5 +23,5 @@ spec:
               number: 80
   # tls: # placing a host in the TLS config will determine what ends up in the cert's subjectAlt
   # - hosts:
-  #   - smoothie-qua.simplon-duna.space
+  #   - smoothie-treafik.simplon-duna.space
   #   secretName: secret-tls # cert-manager will store the created certificate in this secret.
