--- a/Infra/cluster/values.yaml
+++ b/Infra/cluster/values.yaml
@@ -10,12 +10,12 @@ middlewares:
   my-auth:
     basicAuth:
       users:
-        - "devusertreafik:$apr1$password_basicauth_648$"
+        - "devusertraefik:$apr1$password_basicauth_648$"
 
 # Configuration des règles d'IPSource
 routers:
   my-router:
-    rule: "Host(`smoothie-treafik.simplon-duna.space`) || (HostRegexp(`smoothie-treafik.simplon-duna.space`, `{subdomain:[a-z]+}.smoothie-treafik.simplon-duna.space`) && IPWhiteList(`192.168.1.0/24`, `10.0.0.0/8`))"
+    rule: "Host(`smoothie-traefik.simplon-duna.space`) || (HostRegexp(`smoothie-traefik.simplon-duna.space`, `{subdomain:[a-z]+}.smoothie-traefik.simplon-duna.space`) && IPWhiteList(`192.168.1.0/24`, `10.0.0.0/8`))"
     middlewares:
       - name: my-auth
     service: vote-service # Le nom du service de la voting-app
