--- a/Infra/cluster/values.yaml
+++ b/Infra/cluster/values.yaml
@@ -23,16 +23,18 @@ middlewares:
 #       - web
 
 # Routeur "whoami-http" pour se connecter en HTTP
-  whoami-http:
-    rule: "Host(`smoothie-traefik.simplon-duna.space`)"
-    service: vote-service # Remplacer par le nom du service approprié
-    entryPoints:
-      - http # Utiliser l'entrypoint http pour HTTP
+http:
+  routers:
+    whoami-http:
+      rule: "Host(`smoothie-traefik.simplon-duna.space`)"
+      service: vote-service # Remplacer par le nom du service approprié
+      entryPoints:
+        - http # Utiliser l'entrypoint http pour HTTP
 
 # Permet de rediriger le trafic HTTP vers HTTPS une fois le TLS mis en place
 # Routeur "whoami-https" pour se connecter en HTTPS
-  whoami-https:
-    rule: "Host(`smoothie-traefik.simplon-duna.space`)"
-    service: vote-service # Remplacer par le nom du service approprié
-    entryPoints:
-      - websecure # Utiliser l'entrypoint websecure pour HTTPS
+    whoami-https:
+      rule: "Host(`smoothie-traefik.simplon-duna.space`)"
+      service: vote-service # Remplacer par le nom du service approprié
+      entryPoints:
+        - websecure # Utiliser l'entrypoint websecure pour HTTPS
