--- a/Infra/cluster/ingress_dev1.yaml
+++ b/Infra/cluster/ingress_dev1.yaml
@@ -1,6 +1,6 @@
 # Ingress creation
-apiVersion: traefik.v1alpha1
-kind: IngressRoute
+apiVersion: traefik.containo.us/v1alpha1
+kind: Ingress
 metadata:
   name: votingapp
   annotations:
