ImplementationSpecific instead of prefix

--- a/Infra/cluster/ingress_dev1.yaml
+++ b/Infra/cluster/ingress_dev1.yaml
@@ -16,7 +16,7 @@ spec:
     http:
       paths:
       - path: /
-        pathType: Prefixs
+        pathType: ImplementationSpecific
         backend:
           service:
             name: vote-service
