image latest updated

--- a/Infra/cluster/azure-vote.yaml
+++ b/Infra/cluster/azure-vote.yaml
@@ -77,7 +77,7 @@ spec:
         "kubernetes.io/os": linux
       containers:
       - name: alfred-voting
-        image: simplonasa/azure_voting_app:v1.0.11
+        image: dunvael/custom-voting-app:latest
         resources:
           requests:
             cpu: 100m
