--- a/Infra/cluster/ingress_dev1.yaml
+++ b/Infra/cluster/ingress_dev1.yaml
@@ -5,8 +5,8 @@ metadata:
   name: votingapp
   annotations:
     kubernetes.io/ingress.class: traefik-dev
-    traefik.ingress.kubernetes.io/middleware: "traefik-basicauth"
-    traefik.ingress.kubernetes.io/router.middleware: "traefik-whitelist"
+    # traefik.ingress.kubernetes.io/middleware: "traefik-basicauth"
+    # traefik.ingress.kubernetes.io/router.middleware: "traefik-whitelist"
     # cert-manager.io/issuer: letsencrypt
     # cert-manager.io/issuer-kind: Issuer
     # cert-manager.io/issuer-group: cert-manager.io
