--- a/Infra/cluster/ingress_dev1.yaml
+++ b/Infra/cluster/ingress_dev1.yaml
@@ -4,7 +4,7 @@ kind: Ingress
 metadata:
   name: votingapp
   annotations:
-    kubernetes.io/ingress.class: traefik-dev
+    kubernetes.io/ingress.class: traefik
     # traefik.ingress.kubernetes.io/middleware: "traefik-basicauth"
     # traefik.ingress.kubernetes.io/router.middleware: "traefik-whitelist"
     # cert-manager.io/issuer: letsencrypt
