ip added to ip whitelist

--- a/Infra/cluster/values.yaml
+++ b/Infra/cluster/values.yaml
@@ -16,7 +16,7 @@ middlewares:
 # Configuration des règles d'IPSource
 routers:
   my-router:
-    rule: "Host(`smoothie-traefik.simplon-duna.space`) || (HostRegexp(`smoothie-traefik.simplon-duna.space`, `{subdomain:[a-z]+}.smoothie-traefik.simplon-duna.space`) && IPWhiteList(`192.168.1.0/24`, `10.0.0.0/8`))"
+    rule: "Host(`smoothie-traefik.simplon-duna.space`) || (HostRegexp(`smoothie-traefik.simplon-duna.space`, `{subdomain:[a-z]+}.smoothie-traefik.simplon-duna.space`) && IPWhiteList(`78.202.15.42`))" #`192.168.1.0/24`, `10.0.0.0/8`
     middlewares:
       - name: my-auth
     service: vote-service # Le nom du service de la voting-app
