--- a/Infra/cluster/ingress_dev1.yaml
+++ b/Infra/cluster/ingress_dev1.yaml
@@ -5,6 +5,7 @@ metadata:
   name: votingapp
   annotations:
     kubernetes.io/ingress.class: traefik
+    traefik.ingress.kubernetes.io/router.middlewares: default-basic-auth@kubernetescrd
     # cert-manager.io/issuer: letsencrypt
     # cert-manager.io/issuer-kind: Issuer
     # cert-manager.io/issuer-group: cert-manager.io
