--- a/Infra/cluster/traefik-middlewares.yaml
+++ b/Infra/cluster/traefik-middlewares.yaml
@@ -4,7 +4,7 @@
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: traefik-basicauth
+  name: basicauth-traefik-secret
 spec:
   basicAuth:
     secret: basicauth-traefik-secret
@@ -14,7 +14,7 @@ spec:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: traefik-basicauth
+  name: basicauth-traefik-secret
 data:
   users:
     ZGV2dXNlcnRyYWVmaWs6cGFzc3dvcmRfYmFzaWNhdXRoXzY0OA==
