--- a/Infra/cluster/azure-vote.yaml
+++ b/Infra/cluster/azure-vote.yaml
@@ -112,8 +112,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vote-service
-  # annotations:
-  #   traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
+  annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
 spec:
   type: ClusterIP
   ports:
