routers rules added

--- a/Infra/cluster/traefik-middlewares.yaml
+++ b/Infra/cluster/traefik-middlewares.yaml
@@ -28,3 +28,21 @@ spec:
   ipWhiteList:
     sourceRange:
       - 78.202.15.42
+
+---
+# Routeur "whoami-http" pour se connecter en HTTP
+http:
+  routers:
+    whoami-http:
+      rule: "Host(`smoothie-traefik.simplon-duna.space`)"
+      service: vote-service # Remplacer par le nom du service approprié
+      entryPoints:
+        - http # Utiliser l'entrypoint http pour HTTP
+
+# Permet de rediriger le trafic HTTP vers HTTPS une fois le TLS mis en place
+# Routeur "whoami-https" pour se connecter en HTTPS
+  whoami-https:
+    rule: "Host(`smoothie-traefik.simplon-duna.space`)"
+    service: vote-service # Remplacer par le nom du service approprié
+    entryPoints:
+      - websecure # Utiliser l'entrypoint websecure pour HTTPS
