--- a/Infra/cluster/traefik-middlewares.yaml
+++ b/Infra/cluster/traefik-middlewares.yaml
@@ -31,6 +31,10 @@ spec:
 
 ---
 # Routeur "whoami-http" pour se connecter en HTTP
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: http
 http:
   routers:
     whoami-http:
@@ -39,8 +43,13 @@ http:
       entryPoints:
         - http # Utiliser l'entrypoint http pour HTTP
 
+---
 # Permet de rediriger le trafic HTTP vers HTTPS une fois le TLS mis en place
 # Routeur "whoami-https" pour se connecter en HTTPS
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: https
   whoami-https:
     rule: "Host(`smoothie-traefik.simplon-duna.space`)"
     service: vote-service # Remplacer par le nom du service approprié
