--- a/Infra/cluster/ingress_dev2.yaml
+++ b/Infra/cluster/ingress_dev2.yaml
@@ -1,15 +1,16 @@
 # Ingress creation
-apiVersion: traefik.v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
   name: votingapp
   annotations:
-    traefik.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: traefik
+    traefik.ingress.kubernetes.io/router.middlewares: dev-basicauth-traefik@kubernetescrd,dev-whitelist@kubernetescrd
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure # Ligne pour spécifier l'entrée HTTPS
     cert-manager.io/issuer: letsencrypt
     cert-manager.io/issuer-kind: Issuer
     cert-manager.io/issuer-group: cert-manager.io
 spec:
-  ingressClassName: traefik-dev
   rules:
   - host: smoothie-traefik.simplon-duna.space
     http:
