--- a/Infra/cluster/traefik-middlewares2.yaml
+++ b/Infra/cluster/traefik-middlewares2.yaml
@@ -44,3 +44,16 @@ spec:
       google:
         clientID: 21511219386-1gdp9495l6lp3mjdmdvn7mpdgq0vpqe9.apps.googleusercontent.com
         clientSecret: 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
+
+---
+# Forward Google to Traefik
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: sso
+spec:
+  forwardAuth:
+    address: http://traefik-sso:4181
+    authResponseHeaders: 
+        - "X-Forwarded-User"
+    trustForwardHeader: true
