--- a/Infra/cluster/ingress_dev3.yaml
+++ b/Infra/cluster/ingress_dev3.yaml
@@ -5,7 +5,7 @@ metadata:
   name: votingapp
   annotations:
     kubernetes.io/ingress.class: traefik
-    traefik.ingress.kubernetes.io/router.middlewares: dev-oauth-google@kubernetescrd,dev-whitelist@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: dev-whitelist@kubernetescrd # dev-oauth-google@kubernetescrd,
     traefik.ingress.kubernetes.io/router.entrypoints: websecure # Ligne pour spécifier l'entrée HTTPS
     cert-manager.io/issuer: letsencrypt
     cert-manager.io/issuer-kind: Issuer
