--- a/Infra/cluster/traefik-middlewares2.yaml
+++ b/Infra/cluster/traefik-middlewares2.yaml
@@ -39,7 +39,5 @@ metadata:
   name: sso
 spec:
   forwardAuth:
-    address: http://traefik-sso.dev.svc.cluster.local:4181
-    authResponseHeaders: 
-        - "X-Forwarded-User"
+    address: https://smoothie-traefik.simplon-duna.space/_oauth
     trustForwardHeader: true
